Added companion project text to the website.

--- a/website/assets/mobirise/css/mbr-additional.css
+++ b/website/assets/mobirise/css/mbr-additional.css
@@ -707,7 +707,7 @@ a {
   background-color: #ffffff;
 }
 .cid-s48udlf8KU .mbr-section-title {
-  text-align: left;
+  text-align: center;
 }
 .cid-s48udlf8KU .mbr-section-subtitle {
   text-align: left;
@@ -734,10 +734,47 @@ a {
   background-color: #ffffff;
 }
 .cid-s48vnjULo4 .mbr-section-title {
-  text-align: left;
+  text-align: center;
 }
 .cid-s48vnjULo4 .mbr-section-subtitle {
   text-align: left;
+}
+.cid-twfP3ukDQF {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  background-color: #ffffff;
+}
+.cid-twfP3ukDQF .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-twfP3ukDQF .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (min-width: 1500px) {
+  .cid-twfP3ukDQF .container {
+    max-width: 1400px;
+  }
+}
+.cid-twfP3ukDQF .mbr-iconfont {
+  display: block;
+  font-size: 5rem;
+  color: #6592e6;
+  margin-bottom: 2rem;
+}
+.cid-twfP3ukDQF .card-wrapper {
+  margin-top: 3rem;
+}
+.cid-twfP3ukDQF .row {
+  justify-content: center;
+}
+.cid-twfP3ukDQF .mbr-section-title {
+  text-align: center;
 }
 .cid-s48OLK6784 {
   z-index: 1000;
